docs/api/qiskit/0.19/qiskit.quantum_info.Stinespring.mdx
---
title: Stinespring (v0.19)
description: API reference for qiskit.quantum_info.Stinespring in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Stinespring
---

# Stinespring

<Class id="qiskit.quantum_info.Stinespring" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/channel/stinespring.py" signature="Stinespring(data, input_dims=None, output_dims=None)" modifiers="class">
  Stinespring representation of a quantum channel.

  The Stinespring representation of a quantum channel $\mathcal{E}$ is a rectangular matrix $A$ such that the evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ is given by

$$
\mathcal{E}(ρ) = \mbox{Tr}_2\left[A ρ A^\dagger\right]
$$

  where $\mbox{Tr}_2$ is the [`partial_trace()`](qiskit.quantum_info.partial_trace "qiskit.quantum_info.partial_trace") over subsystem 2.

  A general operator map $\mathcal{G}$ can also be written using the generalized Stinespring representation which is given by two matrices $A$, $B$ such that

$$
\mathcal{G}(ρ) = \mbox{Tr}_2\left[A ρ B^\dagger\right]
$$

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a quantum channel Stinespring operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as a a list of Kraus matrices.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. This can fail for the Stinespring operator if the output dimension cannot be automatically determined.

  ## Attributes

  <span id="stinespring-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.Stinespring.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="stinespring-data" />

  ### data

  <Attribute id="qiskit.quantum_info.Stinespring.data">
    Return data.
  </Attribute>

  <span id="stinespring-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.Stinespring.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="stinespring-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Stinespring.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="stinespring-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.Stinespring.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="stinespring-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.Stinespring.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  ## Methods

  <span id="stinespring-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.Stinespring.__call__" signature="Stinespring.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="stinespring-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.Stinespring.__mul__" signature="Stinespring.__mul__(other)" />

  <span id="stinespring-add" />

  ### add

  <Function id="qiskit.quantum_info.Stinespring.add" signature="Stinespring.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="stinespring-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Stinespring.adjoint" signature="Stinespring.adjoint()">
    Return the adjoint of the operator.
  </Function>

  <span id="stinespring-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Stinespring.compose" signature="Stinespring.compose(other, qargs=None, front=False)">
    Return the composed quantum channel self @ other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The quantum channel self @ other.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if other cannot be converted to a Stinespring or has incompatible dimensions.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") matrices. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.Stinespring#dot "qiskit.quantum_info.Stinespring.dot") method.
  </Function>

  <span id="stinespring-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Stinespring.conjugate" signature="Stinespring.conjugate()">
    Return the conjugate of the QuantumChannel.
  </Function>

  <span id="stinespring-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Stinespring.copy" signature="Stinespring.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="stinespring-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Stinespring.dot" signature="Stinespring.dot(other, qargs=None)">
    Return the right multiplied quantum channel self \* other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The quantum channel self \* other.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if other cannot be converted to a Stinespring or has incompatible dimensions.
  </Function>

  <span id="stinespring-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Stinespring.expand" signature="Stinespring.expand(other)">
    Return the tensor product channel other ⊗ self.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel subclass.

    **Returns**

    the tensor product channel other ⊗ self as a Stinespring object.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="stinespring-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Stinespring.input_dims" signature="Stinespring.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="stinespring-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.Stinespring.is_cp" signature="Stinespring.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="stinespring-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.Stinespring.is_cptp" signature="Stinespring.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving.
  </Function>

  <span id="stinespring-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.Stinespring.is_tp" signature="Stinespring.is_tp(atol=None, rtol=None)">
    Test if a channel is completely-positive (CP)
  </Function>

  <span id="stinespring-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Stinespring.is_unitary" signature="Stinespring.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="stinespring-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.Stinespring.multiply" signature="Stinespring.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="stinespring-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Stinespring.output_dims" signature="Stinespring.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="stinespring-power" />

  ### power

  <Function id="qiskit.quantum_info.Stinespring.power" signature="Stinespring.power(n)">
    The matrix power of the channel.

    **Parameters**

    **n** (*int*) – compute the matrix power of the superoperator matrix.

    **Returns**

    the matrix power of the SuperOp converted to a Stinespring channel.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if the input and output dimensions of the QuantumChannel are not equal, or the power is not an integer.
  </Function>

  <span id="stinespring-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Stinespring.reshape" signature="Stinespring.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="stinespring-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.Stinespring.set_atol" signature="Stinespring.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="stinespring-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.Stinespring.set_rtol" signature="Stinespring.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="stinespring-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.Stinespring.subtract" signature="Stinespring.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="stinespring-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Stinespring.tensor" signature="Stinespring.tensor(other)">
    Return the tensor product channel self ⊗ other.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel subclass.

    **Returns**

    the tensor product channel other ⊗ self as a Stinespring object.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="stinespring-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Stinespring.to_instruction" signature="Stinespring.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="stinespring-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Stinespring.to_operator" signature="Stinespring.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="stinespring-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Stinespring.transpose" signature="Stinespring.transpose()">
    Return the transpose of the QuantumChannel.
  </Function>
</Class>

